test/runnable/link12146.d
// COMPILE_SEPARATELY:
// EXTRA_SOURCES: imports/link12146a.d
import imports.link12146a;

struct Appender
{
    Bar[] tokens; // references TypeInfo of Bar
}

void main()
{
}

